src/objects/DirectDebitRequests__c.object
<CustomObject>
    <fields>
        <fullName>Bill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill</label>
        <referenceTo>Bill__c</referenceTo>
        <relationshipLabel>Direct Debit Requests</relationshipLabel>
        <relationshipName>DirectDebitRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DirectDebit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Debit</label>
        <referenceTo>DirectDebit__c</referenceTo>
        <relationshipLabel>Direct Debit Requests</relationshipLabel>
        <relationshipName>DirectDebitRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installment</label>
        <referenceTo>Instalment__c</referenceTo>
        <relationshipLabel>Direct Debit Requests</relationshipLabel>
        <relationshipName>DirectDebitRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentRefund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment/Refund</label>
        <referenceTo>PaymentRefund__c</referenceTo>
        <relationshipLabel>Direct Debit Requests</relationshipLabel>
        <relationshipName>DirectDebitRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Direct Debit Requests</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>De Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direct Debit Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>